Updated to Java 13 & migrated javaslang -> vavr.
Just for the sake of it :)